src/objects/Option_Fee_Kit_header__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Kit_Price__c</fullName>
        <label>Actual Kit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Fixed_KitHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CO Fixed KitHeader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Option &amp; Fee Kit Headers</relationshipLabel>
        <relationshipName>Option_Fee_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Can_Split__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Can Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Price_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed Price Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit Header</label>
        <referenceTo>Kit_Header__c</referenceTo>
        <relationshipLabel>Option &amp; Fee Kit Headers</relationshipLabel>
        <relationshipName>Option_Fee_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box indicator to restrict the use of the kit to Service Sections only. It also controls the availability of the additional service-specific fields in the modal window or for display in the Info section when viewing a kit. By default this will be set to False.</description>
        <label>Service Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Option &amp; Fee Kit Header</label>
    <nameField>
        <label>Option a Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Option &amp; Fee Kit Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>